API per schemi vocabolari
