# openapi/vocabularies.yaml
@@ -150,14 +150,7 @@ paths:
       tags:
       - public
       parameters:
-        - name: vocabulary_id
-          schema:
-            type: string
-            maxLength: 64
-            pattern: >-
-              [a-zA-Z0-9\-]{0,64}
-          in: path
-          required: true
+        - $ref: "#/components/parameters/vocabulary_id"
         - name: entry_id
           schema:
             type: string
@@ -189,7 +182,7 @@ paths:
                       type: object
                       maxProperties: 50
   /vocabularies/{vocabulary_id}:
-    get:
+    get: &list_vocabularies
       security: []
       summary: Return one or more entries from a vocabulary.
       description: |
@@ -217,14 +210,7 @@ paths:
               [a-zA-Z0-9]{,64}
           in: query
           required: false
-        - name: vocabulary_id
-          schema:
-            type: string
-            maxLength: 64
-            pattern: >-
-              [a-zA-Z0-9-_]+
-          in: path
-          required: true
+        - $ref: "#/components/parameters/vocabulary_id"
         - name: label_it
           description: |-
             A string to be matched in the label_it of the vocabulary.
@@ -247,6 +233,53 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Entries'
+  /vocabularies-schema/{vocabulary_id}:
+    get:
+      security: []
+      summary: Return a vocabulary in the format of a schema.
+      tags:
+        - public
+      parameters:
+        - $ref: "#/components/parameters/vocabulary_id"
+
+      operationId: api.schema_list_entries_oneof
+      description: |-
+        The content of a vocabulary as a json-schema entry,
+        so that it can be embeddable in a schema declaration.
+
+        The format is the following
+      responses:
+        <<: *common-responses
+        '200':
+          description: |
+            A list of the matching entries.
+          headers:
+            <<: [*ratelimit-headers, *caching-fields]
+          content:
+            application/json:
+              schema:
+                type: object
+                maxProperties: 1
+                additionalProperties:
+                  type: object
+                  required:
+                  - oneOf
+                  properties:
+                    oneOf:
+                      type: array
+                      maxItems: 1000
+                      minItems: 0
+                      items:
+                        type: object
+                        additionalProperties: false
+                        properties:
+                          const:
+                            type: string
+                            maxLength: 64
+                          title:
+                            type: string
+                            maxLength: 64
+
   /status:
     get:
       security: []
@@ -279,7 +312,16 @@ paths:
                 $ref: '#/components/schemas/Problem'
 
 components:
-
+  parameters:
+    vocabulary_id:
+      in: path
+      required: true
+      name: vocabulary_id
+      schema:
+        type: string
+        maxLength: 64
+        pattern: >-
+          [a-zA-Z0-9-_]+
   headers:
     X-RateLimit-Limit:
       $ref: 'https://teamdigitale.github.io/openapi/0.0.7/definitions.yaml#/headers/X-RateLimit-Limit'
